# flashbacker-b00t

./: .dockerignore  .justfile-usage.md  B00T_INTEGRATION.md  Dockerfile  README.md  ROADMAP.md  SEAORM_MIGRATION.md  SESSION_SUMMARY.md  flashbacker-mcp  justfile  tasks.jsonl  test-proxy.js
_b00t_/: flashbacker.cli.toml  flashbacker.mcp.toml
agents/: ecosystem.config.js
agents/scripts/: task_processor.py
commercerack-rust/: Cargo.toml  tasks.jsonl
commercerack-rust/crates/api/: Cargo.toml
commercerack-rust/crates/cart/: Cargo.toml
commercerack-rust/crates/core/: Cargo.toml
commercerack-rust/crates/customer/: Cargo.toml
commercerack-rust/crates/customer/src/: address.rs  auth.rs  lib_seaorm.rs
commercerack-rust/crates/db/: Cargo.toml  README.md
commercerack-rust/crates/db/src/: errors.rs  lib.rs  models.rs
commercerack-rust/crates/inventory/: Cargo.toml
commercerack-rust/crates/order/: Cargo.toml
commercerack-rust/crates/payment/: Cargo.toml
commercerack-rust/crates/product/: Cargo.toml
commercerack-rust/crates/shipping/: Cargo.toml
commercerack-rust/entity/: Cargo.toml
commercerack-rust/entity/src/: customers.rs  lib.rs  orders.rs  prelude.rs  products.rs
commercerack-rust/jsonapi/: Cargo.toml
commercerack-rust/migration/src/: lib.rs  m20251117_000001_create_zusers.rs  m20251117_000002_create_customers.rs  m20251117_000003_create_customer_addrs.rs  m20251117_000004_create_customer_notes.rs  m20251117_000005_create_products.rs  m20251117_000006_create_product_relations.rs  m20251117_000007_create_sku_lookup.rs  m20251117_000008_create_orders.rs  m20251117_000009_create_order_events.rs  m20251117_000010_create_order_counters.rs  (+12 more)
commercerack-rust/migrations/: 001_initial_schema.sql
commercerack-rust/tools/: postgres_to_seaorm.py
commercerack-rust/vstore/: Cargo.toml
registry/: README.md
(+4 files in other folders)
