[package]
name = "entity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm.workspace = true
serde.workspace = true
chrono.workspace = true
uuid.workspace = true
rust_decimal.workspace = true
