[package]
name = "commercerack-db"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
